# cyberquiz

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  conftest.py  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  migrations.py  nginx.conf  pyproject.toml  settings.py  tasks.py  test_app.py
data/: app_do.db.bak
migrations/: 001_create_users_table.sql  002_create_quizzes_table.sql  003_create_quiz_questions.sql  004_create_quiz_results_table.sql  005_load_quiz_questions.py  009_alter_users_table.sql  016_alter_quizzes_table.sql  017_update_quiz_total_questions.py  018_add_quiz_id_to_quizzes.sql  019_update_quiz_loader.py  020_update_existing_quizzes_with_ids.py  021_update_quiz_class_names.py  022_update_quiz_classes_per_directory.py  023_reload_all_quizzes_from_directories.py
quizzes/: ch01.yml  ch02.yml  ch04.yml  ch05.yml  ch09.yml  ch10.yml  ch14.yml  cis55_class1_introduction_to_cybersecurity.yml  cis55_class2_incident_response_and_cryptography.yml  cis55_class3_threat_modeling_and_penetration_testing_tools.yml  cis55_class4_osint_owasp.yml  cis55_class5_tools_cloud_llms.yml  cis55_optional_final_test.yml  wireshark_basics.yml
quizzes/cis_52/: introduction_to_core_concepts.yml
quizzes/cis_53/: intrusion_detection_basics.yml  network_security_basics.yml  wireshark_basics.yml
quizzes/cis_55/: cis55_class1_introduction_to_cybersecurity.yml  (+5 more)
templates/: 404.html  500.html  admin.html  base.html  dashboard.html  index.html  login.html  quiz.html  quiz_selection.html  update.html  update_account.html
(+13 files in other folders)
